--- a/01_frontend_UI_app/addproduct.html
+++ b/01_frontend_UI_app/addproduct.html
@@ -14,36 +14,50 @@
     <style>
     </style>
     <body>
-        <div class="jumbotron text-center" style="padding: 1%;">
-            <h1>STEPP - ADD PRODUCT</h1>
-        </div>
+      <nav class="navbar navbar-expand-sm" style="background-color: lightgrey; margin-bottom: 2%;">
         <div class="container">
-            <form>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model*</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="model" placeholder="Enter model name/number">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model Size*</label>
-                  <div class="col-sm-10">
-                    <select id="size" class="form-control">
-                    </select>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Model Color*</label>
-                  <div class="col-sm-10">
-                    <select id="color" class="form-control">
-                    </select>
-                  </div>
-                </div>
-                <div style="float: right;">
-                  <button type="button" class="btn btn-primary" onclick="addProductBtnClick()">Submit</button>
-                  <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
-                </div>
-            </form>
+          <a class="navbar-brand" href="index.html">
+            <img src="imgs/stepp_logo.png" style="width:40px;">
+            <span style="font-family: fantasy; font-style: italic; font-size: 108%; vertical-align: -webkit-baseline-middle; color: black;">Stepp</span>
+          </a>
         </div>
+      </nav>
+      <div class="container">
+        <div class="card text-center" style="box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;">
+          <div class="card-header" style="font-weight: bold;">
+            ADD PRODUCT
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Model*</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="model" placeholder="Enter model name/number">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Model Size*</label>
+                <div class="col-sm-10">
+                  <select id="size" class="form-control">
+                  </select>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Model Color*</label>
+                <div class="col-sm-10">
+                  <select id="color" class="form-control">
+                  </select>
+                </div>
+              </div>
+          </form>
+          </div>
+          <div class="card-footer text-muted">
+            <div class="btn-group btn-group-md" style="float: right;" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-secondary" onclick="addProductBtnClick()">Submit</button>
+              <button type="button" class="btn btn-secondary" onclick="location.href='index.html'">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
