--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -24,9 +24,14 @@
         }
     </style>
     <body>
-        <div class="jumbotron text-center">
-            <h1>STEPP HEALTH FOOTWEARS</h1>
-        </div>
+        <nav class="navbar navbar-expand-sm" style="background-color: lightgrey; margin-bottom: 2%;">
+            <div class="container">
+              <a class="navbar-brand" href="index.html">
+                <img src="imgs/stepp_logo.png" style="width:40px;">
+                <span style="font-family: fantasy; font-style: italic; font-size: 108%; vertical-align: -webkit-baseline-middle; color: black;">Stepp</span>
+              </a>
+            </div>
+        </nav>
         <div class="container">
             <div class="row ">
                 <div class="col-sm-4">
@@ -34,7 +39,7 @@
                         <div class="card-body">
                             <h5 class="card-title">View Transaction Dashboard</h5>
                             <p class="card-text">View transactions for a particular date range.</p>
-                            <a href="viewtransactions.html" class="btn btn-primary">View Now</a>
+                            <a href="viewtransactions.html" class="btn btn-secondary">View Now</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +48,7 @@
                         <div class="card-body">
                             <h5 class="card-title">View Availabe Stocks</h5>
                             <p class="card-text">View product inventory and know the availabe stock information.</p>
-                            <a href="viewproducts.html" class="btn btn-primary">View Now</a>
+                            <a href="viewproducts.html" class="btn btn-secondary">View Now</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +57,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Add Product</h5>
                             <p class="card-text">Add new product to inventory by specifying the model, size and color.</p>
-                            <a href="addproduct.html" class="btn btn-primary">Add Now</a>
+                            <a href="addproduct.html" class="btn btn-secondary">Add Now</a>
                         </div>
                     </div>
                 </div>
@@ -63,7 +68,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Stock In</h5>
                             <p class="card-text">Update the incoming product details which was purchased from the dealer.</p>
-                            <a href="stockin.html" class="btn btn-primary">Update Now</a>
+                            <a href="stockin.html" class="btn btn-secondary">Update Now</a>
                         </div>
                     </div>
                 </div>            
@@ -72,7 +77,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Stock Sale</h5>
                             <p class="card-text">Update the product details which was sold/delivered to the customer.</p>
-                            <a href="stocksale.html" class="btn btn-primary">Update Now</a>
+                            <a href="stocksale.html" class="btn btn-secondary">Update Now</a>
                         </div>
                     </div>
                 </div>
@@ -81,7 +86,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Stock Transfer</h5>
                             <p class="card-text">Update the product details which was transferred to other shop/dealers.</p>
-                            <a href="stocktransfer.html" class="btn btn-primary">Update Now</a>
+                            <a href="stocktransfer.html" class="btn btn-secondary">Update Now</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +97,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Other transactions</h5>
                             <p class="card-text">Update other income/expense transactions.</p>
-                            <a href="othertransactions.html" class="btn btn-primary">Update Now</a>
+                            <a href="othertransactions.html" class="btn btn-secondary">Update Now</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +106,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Scan</h5>
                             <p class="card-text">Update the scan related transaction with comments.</p>
-                            <a href="scan.html" class="btn btn-primary">Update Now</a>
+                            <a href="scan.html" class="btn btn-secondary">Update Now</a>
                         </div>
                     </div>
                 </div>
