--- a/01_frontend_UI_app/addproduct.html
+++ b/01_frontend_UI_app/addproduct.html
@@ -49,6 +49,15 @@
                   </select>
                 </div>
               </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Type*</label>
+                <div class="col-sm-10">
+                  <select id="type" class="form-control">
+                    <option value="base">Base</option>
+                    <option value="custom">Custom</option>
+                  </select>
+                </div>
+              </div>
           </form>
           </div>
           <div class="card-footer text-muted">
