--- a/01_frontend_UI_app/scan.html
+++ b/01_frontend_UI_app/scan.html
@@ -15,7 +15,61 @@
       svg { cursor: pointer; }
     </style>
     <body>
-        <div class="jumbotron text-center" style="padding: 1%;">
+      <nav class="navbar navbar-expand-sm" style="background-color: lightgrey; margin-bottom: 2%;">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img src="imgs/stepp_logo.png" style="width:40px;">
+            <span style="font-family: fantasy; font-style: italic; font-size: 108%; vertical-align: -webkit-baseline-middle; color: black;">Stepp</span>
+          </a>
+        </div>
+      </nav>
+      <div class="container">
+        <div class="card text-center" style="box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;">
+          <div class="card-header" style="font-weight: bold;">
+            SCAN
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Bill Number*</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="bill_no" placeholder="Enter bill number">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Date*</label>
+                <div class="col-sm-10">
+                  <input type="date" class="form-control" style="width: 24%;" id="date" placeholder="yyyy-mm-dd">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Description*</label>
+                <div class="col-sm-10">
+                  <textarea class="form-control" id="description" placeholder="Enter description"></textarea>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Amount*</label>
+                <div class="col-sm-10">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">₹</div>
+                    </div>
+                    <input type="text" class="form-control" onkeydown="rateInputHandle(event, this)" id="amount" placeholder="Enter amount">
+                  </div>
+                </div>
+              </div>
+          </form>
+          </div>
+          <div class="card-footer text-muted">
+            <div class="btn-group btn-group-md" style="float: right;" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-secondary" onclick="submitScanTxn()">Submit</button>
+              <button type="button" class="btn btn-secondary" onclick="location.href='index.html'">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="jumbotron text-center" style="padding: 1%;">
             <h1>STEPP - SCAN</h1>
         </div>
         <div class="container">
@@ -54,6 +108,6 @@
                   <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
                 </div>
             </form>
-        </div>
+        </div> -->
     </body>
 </html>
