--- a/01_frontend_UI_app/stockin.html
+++ b/01_frontend_UI_app/stockin.html
@@ -56,12 +56,13 @@
               <table class="table">
                 <thead>
                   <tr style="text-align: center;">
-                    <th style="width: 18%;">Model*</th>
-                    <th style="width: 18%;">Size*</th>
-                    <th style="width: 18%;">Color*</th>
-                    <th style="width: 18%;">Quantity*</th>
+                    <th style="width: 16%;">Model*</th>
+                    <th style="width: 14%;">Size*</th>
+                    <th style="width: 14%;">Color*</th>
+                    <th style="width: 14%;">Type*</th>
+                    <th style="width: 14%;">Quantity*</th>
                     <th style="width: 18%;">Amount*</th>
-                    <th style="width: 10%;">
+                    <th style="width: 8%;">
                       <svg version="1.1" id="Layer_1" style="height: 25px;" onclick="addRow()" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 493.456 493.456" style="enable-background:new 0 0 493.456 493.456;" xml:space="preserve">
                         <g>
 	                        <g>
