--- a/01_frontend_UI_app/stocksale.html
+++ b/01_frontend_UI_app/stocksale.html
@@ -15,57 +15,76 @@
       svg { cursor: pointer; }
     </style>
     <body>
-        <div class="jumbotron text-center" style="padding: 1%;">
-            <h1>STEPP - STOCK SALE</h1>
-        </div>
+      <nav class="navbar navbar-expand-sm" style="background-color: lightgrey; margin-bottom: 2%;">
         <div class="container">
-            <form>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Bill Number*</label>
-                  <div class="col-sm-10">
-                    <input type="text" class="form-control" id="bill_no" placeholder="Enter bill number">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Bill Amount*</label>
-                  <div class="col-sm-10">
-                    <div class="input-group">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text">₹</div>
-                      </div>
-                      <input type="text" class="form-control" id="bill_amt" readonly="true" placeholder="Total bill amount will be auto-calculated">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-2 col-form-label">Bill Date*</label>
-                  <div class="col-sm-10">
-                    <input type="date" class="form-control" style="width: 24%;" id="bill_date" placeholder="yyyy-mm-dd">
-                  </div>
-                </div>
-                <table class="table">
-                  <thead>
-                    <tr style="text-align: center;">
-                      <th style="width: 15%;">Model*</th>
-                      <th style="width: 9%;">Size*</th>
-                      <th style="width: 13%;">Color*</th>
-                      <th style="width: 13%;">Cost Type*</th>
-                      <th style="width: 11%;">Quantity*</th>
-                      <th style="width: 16%;">Purchase Amount*</th>
-                      <th style="width: 16%;">Sale Amount*</th>
-                      <th style="width: 3%;"></th>
-                    </tr>
-                  </thead>
-                  <tbody id="prdTbl"></tbody>
-                </table>
-                <div style="float: left;">
-                  <button type="button" class="btn btn-primary" onclick="addRow()">Add</button>
-                </div>
-                <div style="float: right;">
-                  <button type="button" class="btn btn-primary" onclick="stockSaleBtnClick()">Submit</button>
-                  <a id="go_back_id" href="index.html" class="btn btn-primary">Go Back</a>
-                </div>
-            </form>
+          <a class="navbar-brand" href="index.html">
+            <img src="imgs/stepp_logo.png" style="width:40px;">
+            <span style="font-family: fantasy; font-style: italic; font-size: 108%; vertical-align: -webkit-baseline-middle; color: black;">Stepp</span>
+          </a>
         </div>
+      </nav>
+      <div class="container">
+        <div class="card text-center" style="box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;">
+          <div class="card-header" style="font-weight: bold;">
+            STOCK SALE
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Bill Number*</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="bill_no" placeholder="Enter bill number">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Bill Amount*</label>
+                <div class="col-sm-10">
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text">₹</div>
+                    </div>
+                    <input type="text" class="form-control" id="bill_amt" readonly="true" placeholder="Total bill amount will be auto-calculated">
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Bill Date*</label>
+                <div class="col-sm-10">
+                  <input type="date" class="form-control" style="width: 24%;" id="bill_date" placeholder="yyyy-mm-dd">
+                </div>
+              </div>
+              <table class="table">
+                <thead>
+                  <tr style="text-align: center;">
+                    <th style="width: 15%;">Model*</th>
+                    <th style="width: 9%;">Size*</th>
+                    <th style="width: 13%;">Color*</th>
+                    <th style="width: 13%;">Cost Type*</th>
+                    <th style="width: 11%;">Quantity*</th>
+                    <th style="width: 16%;">Purchase Amount*</th>
+                    <th style="width: 16%;">Sale Amount*</th>
+                    <th style="width: 3%;">
+                      <svg version="1.1" id="Layer_1" style="height: 25px;" onclick="addRow()" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 493.456 493.456" style="enable-background:new 0 0 493.456 493.456;" xml:space="preserve">
+                        <g>
+	                        <g>
+		                        <path d="M246.73,0C110.682,0,0.002,110.68,0.002,246.732s110.68,246.724,246.728,246.724s246.724-110.668,246.724-246.724 S382.778,0,246.73,0z M362.398,254.552c0,4.152-3.124,7.604-7.284,7.604h-88.972c-2.12,0-3.98,1.656-3.98,3.772v89.188 c0,4.144-3.264,7.296-7.4,7.296h-15.716c-4.156,0-7.744-3.152-7.744-7.296v-89.188c0-2.116-1.516-3.772-3.644-3.772h-88.8 c-4.152,0-7.804-3.452-7.804-7.604v-15.716c0-4.14,3.652-7.528,7.804-7.528h88.8c2.128,0,3.644-1.724,3.644-3.856v-88.608 c0-4.152,3.584-7.796,7.744-7.796h15.716c4.132,0,7.4,3.644,7.4,7.796v88.608c0,2.132,1.712,3.856,3.856,3.856h89.096 c4.16,0,7.284,3.388,7.284,7.528V254.552z"/>
+	                        </g>
+                        </g>
+                      </svg>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody id="prdTbl"></tbody>
+              </table>
+            </form>
+          </div>
+          <div class="card-footer text-muted">
+            <div class="btn-group btn-group-md" style="float: right;" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-secondary" onclick="stockSaleBtnClick()">Submit</button>
+              <button type="button" class="btn btn-secondary" onclick="location.href='index.html'">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
