- Added "type" under product collections and updated all the related features.

--- a/01_frontend_UI_app/stocksale.html
+++ b/01_frontend_UI_app/stocksale.html
@@ -59,7 +59,7 @@
                     <th style="width: 15%;">Model*</th>
                     <th style="width: 9%;">Size*</th>
                     <th style="width: 13%;">Color*</th>
-                    <th style="width: 13%;">Cost Type*</th>
+                    <th style="width: 13%;">Type*</th>
                     <th style="width: 11%;">Quantity*</th>
                     <th style="width: 16%;">Purchase Amount*</th>
                     <th style="width: 16%;">Sale Amount*</th>
