--- a/01_frontend_UI_app/stocksalebill.html
+++ b/01_frontend_UI_app/stocksalebill.html
@@ -9,7 +9,7 @@
         <script src="scripts/libs/popper.min.js"></script>
         <script src="scripts/libs/bootstrap.min.js"></script>
         <script src="scripts/common.js"></script>
-        <script src="scripts/stockinbill.js"></script>
+        <script src="scripts/stocksalebill.js"></script>
     </head>
     <style>
       svg { cursor: pointer; }
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="card text-center" style="box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;">
           <div class="card-header" style="font-weight: bold;">
-            STOCK IN - BILL
+            STOCK SALE - BILL
           </div>
           <div class="card-body">
             <form>
@@ -56,17 +56,18 @@
               <table class="table">
                 <thead>
                   <tr style="text-align: center;">
-                    <th style="width: 20%;">Model*</th>
-                    <th style="width: 16%;">Size*</th>
-                    <th style="width: 16%;">Color*</th>
-                    <th style="width: 16%;">Type*</th>
-                    <th style="width: 16%;">Quantity*</th>
-                    <th style="width: 16%;">Amount*</th>
+                    <th style="width: 16%;">Model*</th>
+                    <th style="width: 10%;">Size*</th>
+                    <th style="width: 13%;">Color*</th>
+                    <th style="width: 13%;">Type*</th>
+                    <th style="width: 12%;">Quantity*</th>
+                    <th style="width: 16%;">Purchase Amount*</th>
+                    <th style="width: 16%;">Sale Amount*</th>
                   </tr>
                 </thead>
                 <tbody id="prdTbl"></tbody>
               </table>
-          </form>
+            </form>
           </div>
           <div class="card-footer text-muted">
             <div class="btn-group btn-group-md" style="float: right;" role="group" aria-label="Basic example">
