--- a/01_frontend_UI_app/stocksale.html
+++ b/01_frontend_UI_app/stocksale.html
@@ -37,6 +37,24 @@
                 </div>
               </div>
               <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="cust_name" placeholder="Enter customer name">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Phone</label>
+                <div class="col-sm-10">
+                  <input type="number" class="form-control" id="cust_ph" placeholder="Enter customer phone number" min="0" onkeypress="onQuantityKeyPress(event)" oncopy="return false" onpaste="return false" />
+                </div>
+              </div>
+              <div class="form-group row">
+                <label class="col-sm-2 col-form-label">Address</label>
+                <div class="col-sm-10">
+                  <textarea class="form-control" id="cust_address" placeholder="Enter customer address"></textarea>
+                </div>
+              </div>
+              <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Bill Amount*</label>
                 <div class="col-sm-10">
                   <div class="input-group">
