- Enabled purchase rate edit on stock sale bill page. - Updated the API as well.

--- a/01_frontend_UI_app/stocksalebill.html
+++ b/01_frontend_UI_app/stocksalebill.html
@@ -89,6 +89,7 @@
           </div>
           <div class="card-footer text-muted">
             <div class="btn-group btn-group-md" style="float: right;" role="group" aria-label="Basic example">
+              <button type="button" class="btn btn-secondary" onclick="updatePurRate()">Update Purchase Amount</button>
               <button type="button" class="btn btn-secondary" onclick="window.top.close()">Ok</button>
             </div>
           </div>
