- Added view customer database feature

--- a/01_frontend_UI_app/index.html
+++ b/01_frontend_UI_app/index.html
@@ -110,6 +110,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-4">
+                    <div class="card  shadow-lg p-3 mb-5 bg-white rounded">
+                        <div class="card-body">
+                            <h5 class="card-title">Customer Database</h5>
+                            <p class="card-text">View customer contact details like name, phone number and address.</p>
+                            <a href="viewcustomers.html" class="btn btn-secondary">View Now</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
